[package]
name = "prosemirror"
version = "0.1.0"
authors = ["Xiphoseer"]
edition = "2018"
license = "MIT"

[dev-dependencies]

[dependencies]
derivative = "2.2.0"
thiserror = "1.0"
displaydoc = "0.1"
derive-new = "0.5"
serde_json = "1.0.53"

[dependencies.serde]
version = "1.0.97"
features = ["derive"]
