[workspace]
members = ["python", "node"]
resolver = "2"

[package]
name = "prosemirror"
version = "0.3.1"
authors = [
    "Johannes Wilm <johannes@fiduswriter.org>",
    "Daniel Seiler <me@dseiler.eu>",
]
edition = "2021"
license = "MIT"
description = "A Rust implementation of ProseMirror's document model and transform pipeline"
repository = "https://github.com/fiduswriter/prosemirror-rs"
homepage = "https://github.com/fiduswriter/prosemirror-rs"
documentation = "https://docs.rs/prosemirror"
readme = "README.md"
keywords = ["prosemirror", "collaborative", "editor", "document", "transform"]
categories = ["text-editors", "web-programming", "data-structures"]
exclude = ["tests/spec/", ".github/"]

[dependencies]
derivative = "2.2.0"
thiserror = "1.0"
displaydoc = "0.2"
derive-new = "0.5"
serde_json = "1.0.53"

[dependencies.serde]
version = "1.0.97"
features = ["derive"]

[dev-dependencies]
